--- a/SMPv2/app/src/main/AndroidManifest.xml
+++ b/SMPv2/app/src/main/AndroidManifest.xml
@@ -39,6 +39,7 @@
         <activity android:name=".SettingsActivity" />
         <activity android:name=".BusinessDashboard" />
         <activity android:name=".MapsActivity" />
+        <activity android:name=".Analytics"></activity>
     </application>
 
 </manifest>
