--- a/SMPv2/app/build.gradle
+++ b/SMPv2/app/build.gradle
@@ -22,6 +22,7 @@ android {
     }
 
     useLibrary 'org.apache.http.legacy'
+    sourceSets { main { assets.srcDirs = ['src/main/assets', 'src/main/assets/'] } }
 }
 
 dependencies {
