user points class + adapter class

--- a/SMPv2/app/src/main/AndroidManifest.xml
+++ b/SMPv2/app/src/main/AndroidManifest.xml
@@ -31,26 +31,37 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".MainActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".SignupActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".DashboardActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".ProfileActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".SettingsActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".BusinessDashboard"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".MapsActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".Analytics"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".BusinessSignup"
-            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".LoginActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".SignupActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".DashboardActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ProfileActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".SettingsActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".BusinessDashboard"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".MapsActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Analytics"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".BusinessSignup"
+            android:screenOrientation="portrait" />
+        <activity android:name=".UserPointsActivity"></activity>
     </application>
 
 </manifest>
