--- a/SMPv2/app/src/main/AndroidManifest.xml
+++ b/SMPv2/app/src/main/AndroidManifest.xml
@@ -61,7 +61,8 @@
         <activity
             android:name=".BusinessSignup"
             android:screenOrientation="portrait" />
-        <activity android:name=".UserPointsActivity"></activity>
+        <activity android:name=".UserPointsActivity" />
+        <activity android:name=".WelcomeActivity"></activity>
     </application>
 
 </manifest>
