Work on phase 2 tasks

--- a/SMPv2/app/src/main/AndroidManifest.xml
+++ b/SMPv2/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity
+            android:name=".BusinessSettingsActivity"
+            android:screenOrientation="portrait"></activity>
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
@@ -62,7 +66,7 @@
             android:name=".BusinessSignup"
             android:screenOrientation="portrait" />
         <activity android:name=".UserPointsActivity" />
-        <activity android:name=".WelcomeActivity"></activity>
+        <activity android:name=".WelcomeActivity" />
     </application>
 
 </manifest>
