Settings stuff in php & supervisor minutes

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 
 Documentation/~\$ase2CurrentFunctionality\.docx
+
+~\$Test Cases\.xlsx
+
+Documentation/April 28 - May 4/~\$pervisor Weekly Meeting Minutes\.doc
