--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ Documentation/April 21 - 27/~$atus Report.docx
 ~\$Test Cases\.xlsx
 
 Documentation/April 28 - May 4/~\$pervisor Weekly Meeting Minutes\.doc
+
+Documentation/~\$sks and Issues Working Table\.docx
