--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,8 @@ Documentation/April 28 - May 4/~$age Plan.docx
 Documentation/April 28 - May 4/~WRL0003.tmp
 
 Documentation/~\$sks and Issues Working Table\.docx
+Documentation/April 28 - May 4/~$ekly Status Report.docx
+~$Estimates and Actuals.xlsx
+Documentation/April 21 - 27/~$atus Report.docx
+Documentation/April 21 - 27/~$atus Report.docx
+Documentation/April 21 - 27/~$atus Report.docx
