hey i did some stuff

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ Documentation/April 28 - May 4/~$ekly Status Report.docx
 Documentation/April 21 - 27/~$atus Report.docx
 Documentation/April 21 - 27/~$atus Report.docx
 Documentation/April 21 - 27/~$atus Report.docx
+Documentation/April 28 - May 4/~$am Meeting Minutes.docx
+Documentation/April 28 - May 4/~$ient Meeting Minutes.docx
+Documentation/April 21 - 27/~$atement of Work.doc
