--- a/SMPv2/app/src/main/AndroidManifest.xml
+++ b/SMPv2/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity android:name=".AdminSettingsActivity"></activity>
         <activity
             android:name=".BusinessSettingsActivity"
             android:screenOrientation="sensorPortrait" />
@@ -42,7 +43,7 @@
         </activity>
         <activity
             android:name=".LoginActivity"
-            android:screenOrientation="sensorPortrait"/>
+            android:screenOrientation="sensorPortrait" />
         <activity
             android:name=".MainActivity"
             android:screenOrientation="sensorPortrait" />
@@ -64,23 +65,24 @@
         <activity
             android:name=".MapsActivity"
             android:screenOrientation="sensorPortrait" />
-        <activity
-            android:name=".Analytics" />
+        <activity android:name=".Analytics" />
         <activity
             android:name=".BusinessSignup"
             android:screenOrientation="sensorPortrait" />
-        <activity android:name=".UserPointsActivity"
-            android:screenOrientation="sensorPortrait"/>
-        <activity android:name=".WelcomeActivity"
-            android:screenOrientation="sensorPortrait"/>
+        <activity
+            android:name=".UserPointsActivity"
+            android:screenOrientation="sensorPortrait" />
+        <activity
+            android:name=".WelcomeActivity"
+            android:screenOrientation="sensorPortrait" />
 
         <service
             android:name="com.amazonaws.mobileconnectors.s3.transferutility.TransferService"
             android:enabled="true" />
 
-        <activity android:name=".DetailedDescription"
-            android:screenOrientation="sensorPortrait">
-        </activity>
+        <activity
+            android:name=".DetailedDescription"
+            android:screenOrientation="sensorPortrait"></activity>
     </application>
 
 </manifest>
