--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ Documentation/April 21 - 27/~$atus Report.docx
 Documentation/April 28 - May 4/~$am Meeting Minutes.docx
 Documentation/April 28 - May 4/~$ient Meeting Minutes.docx
 Documentation/April 21 - 27/~$atement of Work.doc
+Documentation/May 5 - May 11/~$age Plan.docx
