--- a/SMPv2/app/build.gradle
+++ b/SMPv2/app/build.gradle
@@ -61,4 +61,5 @@ dependencies {
     implementation 'com.amazonaws:aws-android-sdk-cognito:2.6.+'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    implementation 'com.kontaktio:sdk:4.0.0'
 }
