--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,7 @@ Documentation/April 28 - May 4/~$am Meeting Minutes.docx
 Documentation/April 28 - May 4/~$ient Meeting Minutes.docx
 Documentation/April 21 - 27/~$atement of Work.doc
 Documentation/May 5 - May 11/~$age Plan.docx
+
+User Manuals/~\$azon AWS User Manual\.docx
+
+User Manuals/~\$uetooth Beacon User Manual\.docx
