--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ Documentation/May 5 - May 11/~$age Plan.docx
 User Manuals/~\$azon AWS User Manual\.docx
 
 User Manuals/~\$uetooth Beacon User Manual\.docx
+Documentation/May 5 - May 11/~$atus Report.docx
