--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ User Manuals/~\$azon AWS User Manual\.docx
 
 User Manuals/~\$uetooth Beacon User Manual\.docx
 Documentation/May 5 - May 11/~$atus Report.docx
+Documentation/~$hase 2.docx
+Documentation/~$3900 Presentation Group 9.pptx
