--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ User Manuals/~\$uetooth Beacon User Manual\.docx
 Documentation/May 5 - May 11/~$atus Report.docx
 Documentation/~$hase 2.docx
 Documentation/~$3900 Presentation Group 9.pptx
+Documentation/~$p_logo.docx
