--- a/SMPv2/app/build.gradle
+++ b/SMPv2/app/build.gradle
@@ -61,5 +61,7 @@ dependencies {
     implementation 'com.amazonaws:aws-android-sdk-cognito:2.6.+'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    implementation 'com.google.zxing:core:3.2.1'
+    implementation 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
     implementation 'com.kontaktio:sdk:4.0.0'
 }
