--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ Documentation/May 5 - May 11/~$atus Report.docx
 Documentation/~$hase 2.docx
 Documentation/~$3900 Presentation Group 9.pptx
 Documentation/~$p_logo.docx
+Documentation/~$atement of Work.doc
