--- a/SMPv2/app/build.gradle
+++ b/SMPv2/app/build.gradle
@@ -62,4 +62,6 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'com.kontaktio:sdk:4.0.0'
+    implementation 'com.google.android.gms:play-services-auth:16.0.0'
+    implementation 'me.dm7.barcodescanner:zxing:1.9'
 }
